unpackaged/main/default/objects/ETT_Price_Master__c/ETT_Price_Master__c.object-meta.xml
<CustomObject>
    <label>Price Master</label>
    <nameField>
        <displayFormat>PMN-{0000}</displayFormat>
        <label>Price Master Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>