unpackaged/main/default/objects/ETT_Price_Master__c/fields/ETT_CC__c.field-meta.xml
<CustomField>
    <fullName>ETT_CC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CC</label>
    <type>Email</type>
</CustomField>