unpackaged/main/default/objects/ETT_Price_Master__c/fields/ETT_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>ETT_Contact_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Price Masters</relationshipLabel>
    <relationshipName>Price_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>