unpackaged/main/default/objects/ETT_Price_Master__c/fields/ETT_Customer_Address__c.field-meta.xml
<CustomField>
    <fullName>ETT_Customer_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Address</label>
    <type>TextArea</type>
</CustomField>