unpackaged/main/default/objects/ETT_Price_Master__c/fields/ETT_Kind_Attention__c.field-meta.xml
<CustomField>
    <fullName>ETT_Kind_Attention__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Kind Attention</label>
    <length>255</length>
    <type>Text</type>
</CustomField>