unpackaged/main/default/objects/ETT_Price_Master__c/fields/ETT_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>ETT_Location_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Location Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>