unpackaged/main/default/objects/ETT_Price_Master__c/fields/ETT_Party_Code__c.field-meta.xml
<CustomField>
    <fullName>ETT_Party_Code__c</fullName>
    <formula>ETT_Party_Name__r.ETT_Party_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Party Code</label>
    <type>Text</type>
</CustomField>