unpackaged/main/default/objects/ETT_Price_Master__c/fields/ETT_Party_Name__c.field-meta.xml
<CustomField>
    <fullName>ETT_Party_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Party Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Price Masters</relationshipLabel>
    <relationshipName>Price_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>