unpackaged/main/default/objects/ETT_Price_Master__c/fields/ETT_Party_Type__c.field-meta.xml
<CustomField>
    <fullName>ETT_Party_Type__c</fullName>
    <label>Party Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>