unpackaged/main/default/objects/ETT_Price_Master__c/fields/ETT_Price_Information_External_Id__c.field-meta.xml
<CustomField>
    <fullName>ETT_Price_Information_External_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Price Information External Id</label>
    <length>250</length>
    <type>Text</type>
</CustomField>