unpackaged/main/default/objects/ETT_Price_Master__c/fields/ETT_Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>ETT_Sales_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Price_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>