unpackaged/main/default/objects/ETT_Price_Master__c/fields/ETT_Store_Code__c.field-meta.xml
<CustomField>
    <fullName>ETT_Store_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Store Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>