unpackaged/main/default/objects/ETT_Price_Master__c/fields/ETT_TRN_Number__c.field-meta.xml
<CustomField>
    <fullName>ETT_TRN_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TRN Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>