unpackaged/main/default/objects/ETT_Price_Master__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Price Masters</relationshipLabel>
    <relationshipName>Price_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>