unpackaged/main/default/objects/ETT_Price_Master__c/recordTypes/ETT_Customer.recordType-meta.xml
<RecordType>
    <fullName>ETT_Customer</fullName>
    <active>false</active>
    <label>Customer</label>
</RecordType>