unpackaged/main/default/objects/ETT_Price_Master__c/recordTypes/ETT_Supplier.recordType-meta.xml
<RecordType>
    <fullName>ETT_Supplier</fullName>
    <active>true</active>
    <label>Supplier</label>
</RecordType>