unpackaged/main/default/objects/ETT_Price_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ETT_Party_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>ETT_Party_Type__c</columns>
    <columns>ETT_Payment_Terms__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>