unpackaged/main/default/objects/ETT_Price_Master__c/listViews/Price_Master.listView-meta.xml
<ListView>
    <fullName>Price_Master</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Price Master</label>
</ListView>